@@ -14,7 +14,7 @@ useDynLib(surveillance)
 import(grDevices, graphics)
 
 ## required generics (that's why we "Depend" on these packages)
-importFrom(stats, coef, vcov, logLik, residuals, confint, AIC, extractAIC,
+importFrom(stats, coef, vcov, logLik, nobs, residuals, confint, AIC, extractAIC,
            profile, simulate, update)
 importFrom(utils, head, tail, toLatex)
 importFrom(xtable, xtable) # if we wouldn't "Depend" on xtable, our
@@ -230,6 +230,7 @@ export(simEpidataCS)
 export(siaf.constant, siaf.gaussian, siaf.lomax, qlomax)
 export(tiaf.constant, tiaf.exponential)
 
+S3method(nobs, epidataCS)
 S3method("[", epidataCS)
 S3method(update, epidataCS)
 export(update.epidataCS)                # for convenience
@@ -261,6 +262,7 @@ export(intensityplot.twinstim)          # for convenience
 S3method(profile, twinstim)
 S3method(vcov, twinstim)
 S3method(logLik, twinstim)
+S3method(nobs, twinstim)
 S3method(simulate, twinstim)
 export(simulate.twinstim)               # for convenience
 S3method(R0, twinstim)
